# ChronosAI

./: .gitignore  AUTORES.md  AVISOS_TERCEIROS.md  HISTORICO.md  README.md  pyproject.toml  render.yaml  requirements.txt  requisitos-rebound.txt  run.py
chronos_safe/: .env.example  AUTHORS.md  CHANGELOG.md  LICENSE  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  run.py  runtime.py
chronos_safe.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
chronos_safe/chronos_safe/: __init__.py  version.py
chronos_safe/chronos_safe.egg-info/: SOURCES.txt
chronos_safe/config/: constants.py  settings.py
chronos_safe/data/: synthetic_generator.py
chronos_safe/docs/: architecture.md  como_rodar.md  inpi_release_checklist.md  render_deploy.md
chronos_safe/domain/: types.py
chronos_safe/evaluation/: metrics.py
chronos_safe/physics/: frames.py
chronos_safe/simulation/: mission_apophis.py  safe_switch.py
chronos_safe/tests/: test_apophis_pipeline.py  test_frames.py  test_runtime.py  test_safe_switch.py  test_simulation_service.py  test_units.py  test_web_ui.py
chronos_safe/training/: train_specialist.py  trainer.py
chronos_safe/utils/: logging_utils.py
chronos_seguro/: README.md  __init__.py  execucao.py
chronos_seguro/aplicativos/: __init__.py
chronos_seguro/avaliacao/: comparativo.py  graficos.py  metricas.py
chronos_seguro/configuracao/: ajustes.py
chronos_seguro/dados/: cache.py  cliente_horizons.py  conjuntos_dados.py  escalonadores.py  gerador_especialista.py  gerador_sintetico.py  preprocessamento.py
chronos_seguro/dominio/: estado.py  resultados.py
chronos_seguro/fisica/: integrador_rapido.py  invariantes.py  motor_rebound.py  referenciais.py  unidades.py
chronos_seguro/modelos/: gnn_residual.py  guarda_ood.py  incerteza.py
docs/: registry_notes.md  render_deploy.md
documentacao/: arquitetura.md  checklist_liberacao_inpi.md  como_rodar.md  deploy_render.md  metodologia.md  notas_registro.md  protocolo_apophis.md
testes/: teste_chave_segura.py  teste_esquemas_api.py  teste_execucao.py  teste_geradores.py  teste_interface_web.py  teste_modelo_forward.py  teste_motor_rebound.py  teste_pipeline_apophis.py  teste_referenciais.py  teste_servico_simulacao.py  teste_unidades.py
tests/: test_api_schemas.py  test_generators.py  test_model_forward.py  test_rebound_engine.py
(+85 files in other folders)
