[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos-seguro"
version = "1.0.0"
description = "Plataforma de simulacao orbital hibrida com aprendizado residual, guardas de seguranca e recuo fisico."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Gabriel Azevedo Marques" }
]
keywords = ["astrodinamica", "n-corpos", "simulacao", "gnn", "fisica", "ia-hibrida"]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "fastapi>=0.110",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
ml = [
  "torch>=2.6",
  "torch-geometric>=2.5",
]
science = [
  "astropy>=6.0",
  "astroquery>=0.4",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
]
rebound = [
  "rebound>=4.4",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
chronos = "chronos_seguro.aplicativos.linha_comando.principal:main"
chronos-web = "chronos_seguro.execucao:run_web_server"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["chronos_seguro*"]

[tool.pytest.ini_options]
testpaths = ["testes"]
pythonpath = ["."]
